--- a/Vacation_Search.ipynb
+++ b/Vacation_Search.ipynb
@@ -39,16 +39,17 @@
       "\n",
       " Directory of C:\\Users\\tope.olatunji1\\Vacation_Search\n",
       "\n",
-      "06/16/22  07:07 PM    <DIR>          .\n",
-      "06/16/22  07:07 PM    <DIR>          ..\n",
+      "06/18/22  10:14 PM    <DIR>          .\n",
+      "06/18/22  10:14 PM    <DIR>          ..\n",
       "06/16/22  12:00 AM    <DIR>          .ipynb_checkpoints\n",
       "06/16/22  12:00 PM    <DIR>          __pycache__\n",
       "06/16/22  11:59 AM                98 config.py\n",
-      "06/16/22  07:07 PM            42,120 Vacation_Search.ipynb\n",
+      "06/18/22  10:14 PM            42,844 Vacation_Search.ipynb\n",
       "06/16/22  12:01 PM            45,677 WeatherPy_Database.csv\n",
-      "06/16/22  07:00 PM            17,415 WeatherPy_vacation.csv\n",
-      "               4 File(s)        105,310 bytes\n",
-      "               4 Dir(s)  126,670,155,776 bytes free\n"
+      "06/16/22  07:09 PM            17,415 WeatherPy_vacation.csv\n",
+      "06/16/22  07:19 PM           198,296 WeatherPy_vacation_map.png\n",
+      "               5 File(s)        304,330 bytes\n",
+      "               4 Dir(s)  124,136,361,984 bytes free\n"
      ]
     }
    ],
@@ -757,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +922,7 @@
        "37             "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1208,13 +1209,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea910102d64b47368baff13869b3d624",
+       "model_id": "6ab1854972b94f04ba2fb3487baf01e6",
        "version_major": 2,
        "version_minor": 0
       },
